--- a/PrivateAks.csproj
+++ b/PrivateAks.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Azure.ResourceManager" Version="1.7.0" />
     <PackageReference Include="Azure.ResourceManager.Authorization" Version="1.0.1" />
     <PackageReference Include="Pulumi" Version="3.*" />
+    <PackageReference Include="Pulumi.Azure" Version="5.48.1" />
     <PackageReference Include="Pulumi.AzureNative" Version="2.3.0" />
     <PackageReference Include="Pulumi.Random" Version="4.13.2" />
   </ItemGroup>
